@@ -1,12 +1,12 @@
 {
-  "timestamp" : "2022-07-01T16:09:55Z",
-  "count_outdated" : 39,
-  "uniques_outdated" : 33,
-  "count" : 40,
-  "uniques" : 34,
+  "timestamp" : "2022-07-20T16:10:25Z",
+  "count_outdated" : 40,
+  "uniques_outdated" : 34,
+  "count" : 41,
+  "uniques" : 35,
   "clones" : [
     {
-      "timestamp": "2022-07-01T00:00:00Z",
+      "timestamp": "2022-07-20T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
