@@ -1,3 +1,10 @@
+2022-07-20T16:10:25Z:
+* notice: last 14d: unq all: 1 1
+* notice: prev accum: outdated-unq outdated-all / unq all: 33 39 / 34 40
+* notice: next accum: outdated-unq outdated-all / unq all: 34 40 / 35 41
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2022-07-01] / [2022-07-20]
+
 2022-07-01T16:09:55Z:
 * notice: last 14d: unq all: 1 1
 * notice: prev accum: outdated-unq outdated-all / unq all: 32 38 / 33 39
